# pong_cpp

./: .clang-format  .editorconfig  .gitignore  Ball.h  CMakeLists.txt  EntityHandler.cpp  EntityHandler.h  GameHandler.cpp  GameHandler.h  Player.h  PointCounter.cpp  PointCounter.h  RandomEngine.h  main.cpp  player.cpp
Ball/: Ball.cpp  Ball.h
EntityHandler/: EntityHandler.cpp  EntityHandler.h
GameHandler/: GameHandler.cpp  GameHandler.h
MenuHandler/: MenuHandler.cpp  MenuHandler.h
Player/: Player.h  player.cpp
PointCounter/: PointCounter.cpp  PointCounter.h
PowerUp/: GrowPowerUp.h  PowerUp.cpp  PowerUp.h  ShrinkPowerUp.h  SlowPowerUp.h  SpeedPowerUp.h
SoundHandler/: SoundHandler.cpp  SoundHandler.h
TextureHandler/: TextureHandler.cpp  TextureHandler.h
assets/power_ups/: credit.txt
assets/sounds/: credits.txt
